# lazarus

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/skills/doc-regeneration/: SKILL.md
.codex/skills/issue-triage/: SKILL.md
.codex/skills/repo-diagnosis/: SKILL.md
.codex/skills/safe-code-modification/: SKILL.md
backend/agents/: _artifact_identity.py  _orchestration.py  diagnosis_agent.py  docs_agent.py  pr_agent.py  synthesis_agent.py  triage_agent.py
directives/: diagnose_repo.md  draft_pr.md  generate_docs.md  synthesize_revival_report.md
execution/: check_dependency_freshness.py  clone_repo.py  fetch_issues.py  fetch_prs.py  inventory_code_structure.py  inventory_manifests.py  open_draft_pr.py  parse_ci_config.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActivityFeed.tsx  HealthPulse.tsx  PipelineGraph.tsx  RecentRuns.tsx  ReportViewer.tsx  RunLauncher.tsx  UiBits.tsx
frontend/src/pdf/: evidencePacket.ts
frontend/src/styles/: global.css
src/lazarus/: __init__.py
src/lazarus/agents/: __init__.py  _artifact_identity.py  _orchestration.py  diagnosis_agent.py  docs_agent.py  orchestrator.py  pr_agent.py  synthesis_agent.py  triage_agent.py
src/lazarus/api/: __init__.py  app.py  models.py  runner.py  store.py
src/lazarus/directives/: diagnose_repo.md  run_pipeline.md  synthesize_revival_report.md  triage_issues_and_prs.md
src/lazarus/execution/: __init__.py  check_dependency_freshness.py  clone_repo.py  fetch_issues.py  fetch_prs.py  inventory_code_structure.py  inventory_manifests.py  open_draft_pr.py  parse_ci_config.py
